--- a/style/base.css
+++ b/style/base.css
@@ -90,16 +90,32 @@ img{
     margin: 0 auto;
 }
 
-.navbar,
-.footer{
-    background: #0060ad;
+.navbar {
+    background: #51b1e7;
 }
 
 .footer{
-    height: 70px;
-    line-height: 70px;
-    color: #b8c9e0;
+    position:relative;
+    width:980px;
+    height: 50px;
+    margin: 20px auto 0 auto;
+    line-height: 50px;
     text-align: center;
+}
+
+.footer .bg{
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    opacity:0.6;
+    filter:alpha(opacity=60);
+}
+
+.footer .inner .p{
+    color:#666;
 }
 
 /* 吊顶 */
@@ -114,7 +130,7 @@ img{
 }
 .navbar .nav li{
     float: left;
-    color: #99bfde;
+    color: #ddd;
     padding: 0 15px;
 }
 
@@ -132,7 +148,7 @@ img{
 
 .navbar .nav li.weixin{
     width:90px;
-    background-color:#1a70b6;
+    background-color:#3ba5e0;
     color:#fff;
     cursor:pointer;
     background-position:95px 15px;
